[package]
name = "host_pub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-to-string-macro = "0.2.5"
native-json = "1.2.4"
native-json-macro = "1.0.7"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tinyhttp = "0.3.8"
